--------------------------
(2012-10-07) version 1.1:

  * Library's findlib name changed to just 'safepass'.


--------------------------
(2012-08-02) version 1.0.1:

  * Fix problem on i386 systems without _BF_body_r in libc.


-------------------------
(2012-07-09) version 1.0:

  * First stable release.
