@@ -1,5 +1,5 @@
 =========================================================================
-| README for OCaml-safepass 1.1						|
+| README for OCaml-safepass						|
 |									|
 | Dario Teixeira (dario.teixeira@yahoo.com)				|
 | October 2012								|
