@@ -1,6 +1,6 @@
 OASISFormat: 0.3
 Name:        OCaml-safepass
-Version:     1.1
+Version:     1.2
 Synopsis:    Facilities for the safe storage of user passwords
 Authors:     Dario Teixeira
 License:     LGPL-2.0 with OCaml linking exception
