@@ -1,7 +1,7 @@
 (* setup.ml generated for the first time by OASIS v0.3.0~rc6 *)
 
 (* OASIS_START *)
-(* DO NOT EDIT (digest: 685c8050df247aeff7cf9f903b92b7a7) *)
+(* DO NOT EDIT (digest: c40b8bd441ffb69221695d180c7557a4) *)
 (*
    Regenerated by OASIS v0.3.0~rc6
    Visit http://oasis.forge.ocamlcore.org for more information and
@@ -5431,7 +5431,7 @@ let setup_t =
           ocaml_version = None;
           findlib_version = None;
           name = "OCaml-safepass";
-          version = "1.1";
+          version = "1.2";
           license =
             OASISLicense.DEP5License
               (OASISLicense.DEP5Unit
@@ -5560,8 +5560,7 @@ let setup_t =
           };
      oasis_fn = Some "_oasis";
      oasis_version = "0.3.0~rc6";
-     oasis_digest =
-       Some "-\235\191\182\185\200\227\167\160\128h\161\024\174z\006";
+     oasis_digest = Some "\129\006\193\210[\145R\157\n\223\239z\1297a\253";
      oasis_exec = None;
      oasis_setup_args = [];
      setup_update = false;
@@ -5569,6 +5568,6 @@ let setup_t =
 
 let setup () = BaseSetup.setup setup_t;;
 
-# 5573 "setup.ml"
+# 5572 "setup.ml"
 (* OASIS_STOP *)
 let () = setup ();;
