@@ -1,4 +1,10 @@
 --------------------------
+(2012-10-08) version 1.2:
+
+  * Add OASIS generated files that were missing from previous release.
+
+
+--------------------------
 (2012-10-07) version 1.1:
 
   * Library's findlib name changed to just 'safepass'.
